--- a/ML_model_visualize.ipynb
+++ b/ML_model_visualize.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO87FgqoPiyqMd6A2B84sKe",
+      "authorship_tag": "ABX9TyMdMTiBChRZuzDql59d0HVZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,17 +69,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# New Section\n",
-        "##ML models test"
-      ],
-      "metadata": {
-        "id": "JEAbr0w4nhvW"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# ML MODELS VISULIZE"
+        "# ML MODELS VISUALIZE"
       ],
       "metadata": {
         "id": "b2c5aRr9DFCs"
